# zpaq

./: .gitignore  CMakeLists.txt  build-mingw.bat  check.bat  check.sh
